<resources>
    <string name="app_name">Cathay Attendance</string>
    <string name="full_name">Full Name</string>
    <string name="staff_number">Staff Number</string>
    <string name="company">Company</string>
    <string name="department">Department</string>
    <string name="save_settings">Save Changes</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="open_settings">Open Settings</string>
    <string name="enable_auto_submit">Enable Auto Submit</string>
    <string name="welcome_prefix">Welcome Mr. </string>
    <string name="submission_success_title">Submission Successful</string>
    <string name="submission_success_msg">Hi %s, Your Attendance Was Submitted Successfully. See You on Next Working Day</string>
    <string name="developer_credit">Say thanks to the Developer ARUMUGAM OMSATHASIVAM</string>
    <string name="back_to_home">Back to Home</string>
    <string name="exit_app">Exit App</string>
    <string name="developer_details">This Safety Dialogue Attendance Record Filler\nwas developed for Cathay Dining by\nARUMUGAM OMSATHASIVAM</string>
</resources>
